# fastbuilder

./: README.md  pyproject.toml  requirements.txt
fastbuilder/: __init__.py  build.py  frontend_template.py  import_sys.py  tools_.py  transfer.py
tests/: __init__.py  add.py
